<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">
    <TextView
        android:textSize="16sp"
        android:text="@string/register_button"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image"
        android:background="@drawable/beijing"
        android:layout_width="match_parent"
        android:layout_height="290dp" />
    <EditText
        style="@style/edit"
        android:hint="@string/name"
        android:layout_below="@id/image"
        android:id="@+id/edit_name"
         />
    <EditText
        style="@style/edit"
        android:hint="@string/email"
        android:layout_below="@id/edit_name"
        android:id="@+id/edit_email"
         />
    <EditText
        style="@style/edit"
        android:password="true"
        android:hint="@string/password"
        android:layout_below="@id/edit_email"
        android:id="@+id/password"
        />
   <EditText
       android:paddingLeft="20dp"
       android:paddingTop="13dp"
       android:paddingBottom="11dp"
       android:textColor="@color/bai"
       android:background="@drawable/login_shape"
       android:layout_below="@id/password"
       android:id="@+id/edit_card"
       android:layout_width="216dp"
       android:textSize="14sp"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="24dp"
       android:layout_height="44dp" />
    <Button
        android:id="@+id/button"
        android:layout_below="@id/password"
        android:text="@string/yanzhengma"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/yanzhengma_shape"
        android:layout_toRightOf="@id/edit_card"
        android:layout_width="96dp"
        android:layout_height="44dp" />
    <TextView
        android:id="@+id/text_view"
        android:textSize="10sp"
        android:textColor="@color/bai"
        android:text="已有账号,立即登录"
        android:layout_below="@id/edit_card"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="252dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        style="@style/button"
        android:id="@+id/but_register"
        android:layout_below="@id/text_view"
        android:text="@string/register_button"
        android:background="@drawable/button_shape"
             />

</RelativeLayout>